# bbl2kml

./: .gitignore  404.html  Makefile  Makefile.gccgo  README.md  bbl2kml.go  bblreader.go  bbmeta.go  go.mod  go.sum  index.html  index.md~  kmlbuilder.go  meson.build  meson_options.txt  posformat.go  sitemap.xml
assets/: pdf.css
cmd/bbl2kml/: main.go
cmd/fl2kmlfyne/: main.go
cmd/fl2kmlgtk/: Makefile  logkml.ui  main.go  resources.xml
cmd/fl2mqtt/: main.go  meson.build
cmd/fl2sitl/: main.go  meson.build
cmd/flightlog2kml/: main.go  meson.build
cmd/log2mission/: main.go  meson.build
cmd/mission2kml/: main.go  meson.build
cmd/otx2kml/: main.go
manual/: mkdocs.yml
manual/docs/: index.md
manual/site/: 404.html  index.html  sitemap.xml
manual/site/search/: search_index.json
meson/: find_files.sh  post_install.py  post_install.sh
pkg/api/types/: common.go  filetype.go  init.go  silence_other.go  silence_windows.go
pkg/aplog/: areader.go  go.mod  meson.build
pkg/bbl/: bblmeta.go  bblreader.go  go.mod  kmlbuilder.go  meson.build
pkg/bltmqtt/: bltmqtt.go  go.mod  meson.build
pkg/bltreader/: bltreader.go  go.mod  meson.build
pkg/cli/: clifile.go  fwapproach.go  meson.build
pkg/flsql/: go.mod  meson.build  sqlite.go
pkg/geo/: dem-download.go  dem.go  frobnicate.go  geocalc.go  get_elevations.go  localdem.go  meson.build  posformat.go
pkg/inav/: go.mod  inav_nav_states.go  inav_wp.go  meson.build  safehome.go
pkg/kmlgen/: genclikml.go  gengeozone.go  gensafekml.go  go.mod  gradgen.go  kmlbuilder.go  meson.build  utils.go
pkg/log2mission/: go.mod  l2m.go  meson.build
pkg/ltmgen/: go.mod  ltmgen.go  meson.build  msgdev.go  msp.go
pkg/mission/: get_elevations.go  go.mod  meson.build  mission-read.go  mission.go  to_kml.go
pkg/mwpjson/: go.mod  meson.build  mwpjson.go
pkg/options/: go.mod  meson.build  options.go
pkg/otx/: go.mod  meson.build  otxreader.go
pkg/readsql/: go.mod  meson.build  sqlreader.go
pkg/sitlgen/: crsf.go  file_reader.go  generic_telem.go  go.mod  ibus.go  inav_misc.go  jeti.go  logger.go  meson.build  msp.go  msptx.go  proc_windows.go  proc_world.go  read_cfg.go  sbus.go  sitlgen.go  txdev.go
pkg/styles/: go.mod  kml_styles.go  meson.build
pkg/types/: common.go  filetype.go  go.mod  init.go  meson.build  silence_other.go  silence_windows.go
search/: search_index.json
src/: Makefile  bbl2kml.go  bblreader.go  go.mod  inav_nav_states.go  kmlbuilder.go  mission.go
tools/: bbsplit.go  gradgengen.go  gradtest.go  mission.go  mission2kml.go  packui.sh
tools/ser2tcp/: Cargo.toml  Makefile  README.md  enumerate_linux.go  enumerate_other.go  go.mod  main.go
tools/ser2tcp/eg_c/: Makefile  README.md  find_best.c  ser2tcp.c  ser2tcp.h  serial.c
tools/ser2tcp/eg_golang/: enumerate_linux.go  main.go
tools/ser2tcp/eg_rust/: README.md
tools/ser2tcp/src/: main.rs
